/*
 * Copyright (c) 2026 toastkidjp.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompany this distribution.
 * The Eclipse Public License is available at http://www.eclipse.org/legal/epl-v10.html.
 */
package jp.toastkid.yobidashi4.presentation.chat

import androidx.compose.foundation.VerticalScrollbar
import androidx.compose.foundation.clickable
import androidx.compose.foundation.gestures.animateScrollBy
import androidx.compose.foundation.layout.Box
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.Row
import androidx.compose.foundation.layout.Spacer
import androidx.compose.foundation.layout.fillMaxHeight
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.foundation.layout.padding
import androidx.compose.foundation.lazy.LazyColumn
import androidx.compose.foundation.lazy.LazyListState
import androidx.compose.foundation.lazy.items
import androidx.compose.foundation.rememberScrollbarAdapter
import androidx.compose.foundation.text.selection.SelectionContainer
import androidx.compose.material.Button
import androidx.compose.material.Divider
import androidx.compose.material.DropdownMenu
import androidx.compose.material.Icon
import androidx.compose.material.IconButton
import androidx.compose.material.MaterialTheme
import androidx.compose.material.Surface
import androidx.compose.material.Text
import androidx.compose.runtime.Composable
import androidx.compose.runtime.DisposableEffect
import androidx.compose.runtime.rememberCoroutineScope
import androidx.compose.ui.Alignment
import androidx.compose.ui.ExperimentalComposeUiApi
import androidx.compose.ui.Modifier
import androidx.compose.ui.focus.focusRequester
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.input.key.onKeyEvent
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.semantics.contentDescription
import androidx.compose.ui.semantics.semantics
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import jp.toastkid.yobidashi4.domain.model.chat.ChatMessage
import jp.toastkid.yobidashi4.domain.model.chat.GenerativeAiModel
import jp.toastkid.yobidashi4.domain.model.tab.ChatTab
import jp.toastkid.yobidashi4.library.resources.Res
import jp.toastkid.yobidashi4.library.resources.ic_clipboard
import jp.toastkid.yobidashi4.presentation.component.GlowingButton
import jp.toastkid.yobidashi4.presentation.component.HoverHighlightDropdownMenuItem
import jp.toastkid.yobidashi4.presentation.component.MultiLineTextField
import jp.toastkid.yobidashi4.presentation.lib.annotation.ExcludeCoverageCalculation
import kotlinx.coroutines.launch
import org.jetbrains.compose.resources.DrawableResource
import org.jetbrains.compose.resources.painterResource
import org.koin.compose.koinInject

@ExcludeCoverageCalculation
@OptIn(ExperimentalComposeUiApi::class)
@Composable
fun ChatTabView(chatTab: ChatTab) {
    ChatTabView(chatTab, koinInject())
}

@OptIn(ExperimentalComposeUiApi::class)
@Composable
fun ChatTabView(
    chatTab: ChatTab,
    viewModel: ChatTabViewModel
) {
    val coroutineScope = rememberCoroutineScope()

    Surface(
        color = MaterialTheme.colors.surface.copy(alpha = 0.75f),
        elevation = 4.dp
    ) {
        Column(
            modifier = Modifier
                .onKeyEvent(viewModel::onChatListKeyEvent)
                .semantics { contentDescription = "Chat list" }
        ) {
            Box(Modifier.padding(8.dp).weight(1f)) {
                SelectionContainer {
                    MessageList(
                        viewModel.scrollState(),
                        viewModel::messages,
                        viewModel::name,
                        viewModel::nameColor,
                        viewModel::clipText
                    )
                }
                VerticalScrollbar(
                    adapter = rememberScrollbarAdapter(viewModel.scrollState()),
                    modifier = Modifier.fillMaxHeight().align(Alignment.CenterEnd)
                )
            }

            Box(
                modifier = Modifier.fillMaxWidth()
            ) {
                Box(
                    contentAlignment = Alignment.CenterStart,
                    modifier = Modifier.padding(start = 8.dp)
                        .align(Alignment.CenterStart)
                ) {
                    DropdownMenu(
                        viewModel.openingModelChooser(),
                        viewModel::closeModelChooser
                    ) {
                        GenerativeAiModel.entries.forEach { model ->
                            HoverHighlightDropdownMenuItem(model.label(), modifier = Modifier.semantics {
                                contentDescription = "chooserItem-${model.label()}"
                            }, drawableResource = viewModel.modelIcon(model)) {
                                viewModel.chooseModel(model)
                                viewModel.closeModelChooser()
                            }
                        }
                    }
                    Surface(
                        elevation = 4.dp,
                        modifier = Modifier.clickable(onClick = viewModel::openModelChooser)
                            .semantics { contentDescription = "Model chooser" }
                    ) {
                        GenerativeAiModelLabel(
                            viewModel::currentModelLabel,
                            viewModel.currentModelIcon()
                        )
                    }
                }

                Button(
                    viewModel::clearChat,
                    modifier = Modifier.align(Alignment.CenterEnd).padding(end = 8.dp)
                ) {
                    Text("Clear chat")
                }
            }

            Row(
                verticalAlignment = Alignment.CenterVertically,
                modifier = Modifier.weight(0.2f)
            ) {
                MultiLineTextField(
                    viewModel.textInput(),
                    viewModel.label(),
                    Int.MAX_VALUE,
                    modifier = Modifier
                        .focusRequester(viewModel.focusRequester())
                        .fillMaxWidth()
                        .weight(0.2f)
                        .onKeyEvent(viewModel::onKeyEvent)
                        .semantics { contentDescription = "Input message box." }
                )

                GlowingButton(
                    modifier = Modifier
                        .clickable(onClick = viewModel::trySend)
                        .semantics { contentDescription = "Send chat" }
                ) {
                    Text("Send", color = MaterialTheme.colors.onPrimary, fontWeight = FontWeight.Bold)
                }
            }
        }
    }

    DisposableEffect(chatTab) {
        coroutineScope.launch {
            viewModel.launch(
                chatTab.chat(),
                chatTab.scrollPosition(),
                chatTab.initialModel(),
                chatTab.initialQuestion()
            )
        }

        coroutineScope.launch {
            viewModel.scrollEventFlow()
                .collect {
                    viewModel.scrollState().animateScrollBy(it)
                }
        }

        coroutineScope.launch {
            viewModel.sendEventFlow()
                .collect {
                    viewModel.send()
                }
        }

        onDispose {
            viewModel.update(chatTab)
        }
    }
}

@Composable
private fun GenerativeAiModelLabel(
    label: () -> String,
    drawableResource: DrawableResource,
    labelColor: Color = MaterialTheme.colors.onSurface
) {
    Row(
        verticalAlignment = Alignment.CenterVertically,
        modifier = Modifier.padding(4.dp)
    ) {
        Icon(
            painter = painterResource(drawableResource),
            contentDescription = label(),
            tint = labelColor
        )
        Text(
            label(),
            color = labelColor,
            modifier = Modifier.padding(start = 4.dp)
        )
    }
}

@Composable
private fun MessageList(
    listState: LazyListState,
    chatMessages: () -> List<ChatMessage>,
    name: (String) -> String,
    nameColor: (String) -> Color,
    clipText: (String) -> Unit
) {
    LazyColumn(state = listState) {
        items(chatMessages()) {
            Row {
                Spacer(modifier = Modifier.weight(0.2f))
                MessageContent(
                    it.text,
                    it.image,
                    it.sources,
                    modifier = Modifier.padding(4.dp).padding(horizontal = 4.dp).weight(0.8f)
                )
            }

            Box(
                modifier = Modifier.fillMaxWidth()
            ) {
                Text(
                    name(it.role),
                    fontSize = 20.sp,
                    fontWeight = FontWeight.ExtraBold,
                    color = nameColor(it.role),
                    modifier = Modifier.padding(horizontal = 4.dp).align(Alignment.BottomStart)
                )

                IconButton(
                    onClick = {
                        clipText(it.text)
                    },
                    modifier = Modifier
                        .align(Alignment.BottomEnd)
                        .padding(end = 8.dp)
                        .testTag("clip_icon")
                ) {
                    Icon(
                        painterResource(Res.drawable.ic_clipboard),
                        contentDescription = "Clip this message.",
                    )
                }
            }

            Divider(modifier = Modifier.padding(start = 16.dp, end = 4.dp))
        }
    }
}