...
                viewModel.inputHistories(),
                viewModel::onClickInputHistory,
                viewModel::onClickDelete,
                viewModel::onClickClear,
                viewModel::onFocusChanged,
                modifier = Modifier.focusRequester(viewModel.focusRequester())
                    .semantics { contentDescription = "Find input" }
            )

            if (viewModel.useReplace()) {
                SingleLineTextField(
                    viewModel.replaceInputValue(),
                    "Replacement"
...

            Checkbox(
                viewModel.caseSensitive(),
                onCheckedChange = {
                    viewModel.switchCaseSensitive()
                },
                modifier = Modifier.semantics { contentDescription = "Case sensitive checkbox" }
            )

            Text("Case sensitive")

            Text(
                "↑",
...
